<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >
        
        <!-- 存放曲线 -->
        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/dema_orp_chart"
            android:layout_weight="3"
            >
            
        </ViewFlipper>
        
        <!-- 设置 参数  是hg还是ag -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="2" 
                android:padding="@dimen/margin_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dema_orp_input_style" 
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/dema_orp_input_ag_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="@string/dema_orp_input_ag" />

                    <RadioButton
                        android:id="@+id/dema_orp_input_hg_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="@string/dema_orp_input_hg" />
                </RadioGroup>

                <Button
                    android:id="@+id/sure_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sure" />
            </LinearLayout>
        
    </LinearLayout>
