<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 基值标定 -->
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/gray"
        android:padding="5dp"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nh4_base_dema_2_name_1"
            />

        <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/nh4_base_dema_2_name_2"
            />
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/nh4_base_dema_2_name_3"
            />
        
    </LinearLayout>
    
    
     <ListView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/list_view_params"
          >
          
      </ListView>
    
    
   
</LinearLayout>